--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,30 @@
     <title>Triangular Grid Model Synthesis Demo</title>
   </head>
   <body>
+    <!-- <label for="cars">Choose a car:</label>
+
+    <select name="cars" id="cars">
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+    </select> -->
+    <!-- <div class="title" role="button" aria-expanded="true" tabindex="0">
+      Controls
+    </div> -->
+
+    <!-- <div class="lil-gui root autoPlace allow-touch-styles">
+      <div class="title" role="button" aria-expanded="true" tabindex="0">
+        "Controls"
+      </div>
+      <div class="children" style>
+        <div class="controller boolean"></div>
+      </div>
+    </div> -->
+
+    <!-- <div class="slidecontainer">
+      <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+    </div> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
